--- a/03_inconsistancy.ipynb
+++ b/03_inconsistancy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "44056798",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is just for testing purposes only\n"
+      "this is just for testing purposes only this is the very interesting practise \n"
      ]
     }
    ],
    "source": [
-    "print(\"this is just for testing purposes only\")"
+    "print(\"this is just for testing purposes only this is the very interesting practise \")"
    ]
   }
  ],
