--- a/03_inconsistancy.ipynb
+++ b/03_inconsistancy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "44056798",
    "metadata": {},
    "outputs": [
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "print(\"this is just for testing purposes only this is the very interesting practise \")"
+    "print(\"this is just for testing purposes only this is the very interesting practise amazing  \")"
    ]
   }
  ],
