--- a/03_inconsistancy.ipynb
+++ b/03_inconsistancy.ipynb
@@ -17,6 +17,24 @@
    "source": [
     "print(\"this is just for testing purposes only this is the very interesting practise amazing  \")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5d9bc573",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pakistan is the beautiful country in the world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"pakistan is the beautiful country in the world\")"
+   ]
   }
  ],
  "metadata": {
