just checking the commit message functionality

--- a/03_inconsistancy.ipynb
+++ b/03_inconsistancy.ipynb
@@ -35,6 +35,24 @@
    "source": [
     "print(\"pakistan is the beautiful country in the world\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "32f4ee5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wahoo amazing tool that are very really helpful for the developers\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"wahoo amazing tool that are very really helpful for the developers\")"
+   ]
   }
  ],
  "metadata": {
