--- a/03_inconsistancy.ipynb
+++ b/03_inconsistancy.ipynb
@@ -53,6 +53,24 @@
    "source": [
     "print(\"wahoo amazing tool that are very really helpful for the developers\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "300de01f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "just checking the commit message functionality tha is very interesting\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"just checking the commit message functionality tha is very interesting\")"
+   ]
   }
  ],
  "metadata": {
