--- a/03_inconsistancy.ipynb
+++ b/03_inconsistancy.ipynb
@@ -20,56 +20,193 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "a45a60b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>country</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sales_2020</th>\n",
+       "      <th>sales_2021</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01-12-2022</td>\n",
+       "      <td>U.S.A.</td>\n",
+       "      <td>Jonh Doe</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022/12/01</td>\n",
+       "      <td>America</td>\n",
+       "      <td>Jane Doe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12-01-2021</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Jane Doe</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date        country      name  sales_2020  sales_2021\n",
+       "0  2021-12-01            USA  John Doe       100.0         NaN\n",
+       "1  01-12-2022         U.S.A.  Jonh Doe       200.0       150.0\n",
+       "2  2022/12/01        America  Jane Doe         NaN       300.0\n",
+       "3  12-01-2021  United States  Jane Doe       200.0       150.0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np  \n",
+    "data = {\n",
+    "    'date': ['2021-12-01', '01-12-2022', '2022/12/01', '12-01-2021'],\n",
+    "    'country': ['USA', 'U.S.A.', 'America', 'United States'],\n",
+    "    'name': ['John Doe', 'Jonh Doe', 'Jane Doe', 'Jane Doe'],\n",
+    "    'sales_2020': [100, 200, None, 200],\n",
+    "    'sales_2021': [None, 150, 300, 150]\n",
+    "}\n",
+    "# make pandas dataframe\n",
+    "df = pd.DataFrame(data)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "5d9bc573",
+   "id": "a8dc8c7d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pakistan is the beautiful country in the world\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>country</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sales_2020</th>\n",
+       "      <th>sales_2021</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>U.S.A.</td>\n",
+       "      <td>Jonh Doe</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>America</td>\n",
+       "      <td>Jane Doe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Jane Doe</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date        country      name  sales_2020  sales_2021\n",
+       "0  2021-12-01            USA  John Doe       100.0         NaN\n",
+       "1         NaN         U.S.A.  Jonh Doe       200.0       150.0\n",
+       "2         NaN        America  Jane Doe         NaN       300.0\n",
+       "3         NaN  United States  Jane Doe       200.0       150.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"pakistan is the beautiful country in the world\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "32f4ee5d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wahoo amazing tool that are very really helpful for the developers\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"wahoo amazing tool that are very really helpful for the developers\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "300de01f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "just checking the commit message functionality tha is very interesting\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"just checking the commit message functionality tha is very interesting\")"
+    "# standardize date format\n",
+    "df['date'] = pd.to_datetime(df['date'], errors='coerce')\n",
+    "df.head()\n",
+    "df['date'] = df['date'].dt.strftime('%Y-%m-%d')\n",
+    "df.head()"
    ]
   }
  ],
