--- a/03_inconsistancy.ipynb
+++ b/03_inconsistancy.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a8dc8c7d",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,141 @@
     "df['date'] = pd.to_datetime(df['date'], errors='coerce')\n",
     "df.head()\n",
     "df['date'] = df['date'].dt.strftime('%Y-%m-%d')\n",
-    "df.head()"
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1ab19c15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        date        country      name  sales_2020  sales_2021\n",
+      "0 2021-12-01            USA  John Doe       100.0         NaN\n",
+      "1        NaT         U.S.A.  Jonh Doe       200.0       150.0\n",
+      "2        NaT        America  Jane Doe         NaN       300.0\n",
+      "3        NaT  United States  Jane Doe       200.0       150.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Recreate your DataFrame with the original date strings\n",
+    "data = {\n",
+    "    'date': ['2021-12-01', '01-12-2022', '2022/12/01', '12-01-2021'],\n",
+    "    'country': ['USA', 'U.S.A.', 'America', 'United States'],\n",
+    "    'name': ['John Doe', 'Jonh Doe', 'Jane Doe', 'Jane Doe'],\n",
+    "    'sales_2020': [100, 200, None, 200],\n",
+    "    'sales_2021': [None, 150, 300, 150]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Now apply your date parsing method\n",
+    "formats = ['%Y-%m-%d', '%d-%m-%Y', '%Y/%m/%d', '%m-%d-%Y']\n",
+    "\n",
+    "for fmt in formats:\n",
+    "    try:\n",
+    "        df['date'] = pd.to_datetime(df['date'], format=fmt, errors='coerce')\n",
+    "        if not df['date'].isna().all():\n",
+    "            break\n",
+    "    except:\n",
+    "        continue\n",
+    "\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a0a7fe76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>country</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sales_2020</th>\n",
+       "      <th>sales_2021</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>U.S.A.</td>\n",
+       "      <td>Jonh Doe</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>America</td>\n",
+       "      <td>Jane Doe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Jane Doe</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date        country      name  sales_2020  sales_2021\n",
+       "0 2021-12-01            USA  John Doe       100.0         NaN\n",
+       "1        NaT         U.S.A.  Jonh Doe       200.0       150.0\n",
+       "2        NaT        America  Jane Doe         NaN       300.0\n",
+       "3        NaT  United States  Jane Doe       200.0       150.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()\n"
    ]
   }
  ],
