--- a/03_inconsistancy.ipynb
+++ b/03_inconsistancy.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "1ab19c15",
    "metadata": {},
    "outputs": [
@@ -219,11 +219,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        date        country      name  sales_2020  sales_2021\n",
-      "0 2021-12-01            USA  John Doe       100.0         NaN\n",
-      "1        NaT         U.S.A.  Jonh Doe       200.0       150.0\n",
-      "2        NaT        America  Jane Doe         NaN       300.0\n",
-      "3        NaT  United States  Jane Doe       200.0       150.0\n"
+      "        date        country     name  sales_2020  sales_2021\n",
+      "0 2021-12-01            USA  Juunaid       100.0         NaN\n",
+      "1        NaT         U.S.A.   Junaid       200.0       150.0\n",
+      "2        NaT        America    Hamza         NaN       300.0\n",
+      "3        NaT  United States    Hazma       200.0       150.0\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
     "data = {\n",
     "    'date': ['2021-12-01', '01-12-2022', '2022/12/01', '12-01-2021'],\n",
     "    'country': ['USA', 'U.S.A.', 'America', 'United States'],\n",
-    "    'name': ['John Doe', 'Jonh Doe', 'Jane Doe', 'Jane Doe'],\n",
+    "    'name': ['Juunaid', 'Junaid', 'Hamza', 'Hazma'],\n",
     "    'sales_2020': [100, 200, None, 200],\n",
     "    'sales_2021': [None, 150, 300, 150]\n",
     "}\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "a0a7fe76",
    "metadata": {},
    "outputs": [
@@ -293,24 +293,24 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2021-12-01</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>John Doe</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Juunaid</td>\n",
        "      <td>100.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>NaT</td>\n",
-       "      <td>U.S.A.</td>\n",
-       "      <td>Jonh Doe</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Junaid</td>\n",
        "      <td>200.0</td>\n",
        "      <td>150.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>NaT</td>\n",
-       "      <td>America</td>\n",
-       "      <td>Jane Doe</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Hamza</td>\n",
        "      <td>NaN</td>\n",
        "      <td>300.0</td>\n",
        "    </tr>\n",
@@ -318,7 +318,7 @@
        "      <th>3</th>\n",
        "      <td>NaT</td>\n",
        "      <td>United States</td>\n",
-       "      <td>Jane Doe</td>\n",
+       "      <td>Hazma</td>\n",
        "      <td>200.0</td>\n",
        "      <td>150.0</td>\n",
        "    </tr>\n",
@@ -327,20 +327,185 @@
        "</div>"
       ],
       "text/plain": [
-       "        date        country      name  sales_2020  sales_2021\n",
-       "0 2021-12-01            USA  John Doe       100.0         NaN\n",
-       "1        NaT         U.S.A.  Jonh Doe       200.0       150.0\n",
-       "2        NaT        America  Jane Doe         NaN       300.0\n",
-       "3        NaT  United States  Jane Doe       200.0       150.0"
+       "        date        country     name  sales_2020  sales_2021\n",
+       "0 2021-12-01  United States  Juunaid       100.0         NaN\n",
+       "1        NaT  United States   Junaid       200.0       150.0\n",
+       "2        NaT  United States    Hamza         NaN       300.0\n",
+       "3        NaT  United States    Hazma       200.0       150.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()\n"
+    "#harmonize country names\n",
+    "country_mapping = {'USA': 'United States', 'U.S.A.': 'United States', 'America': 'United States', 'United States': 'United States'}\n",
+    "df['country'] = df['country'].map(country_mapping)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "dee691c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>country</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sales_2020</th>\n",
+       "      <th>sales_2021</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Junaid</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Junaid</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Hamza</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Hamza</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date        country    name  sales_2020  sales_2021\n",
+       "0 2021-12-01  United States  Junaid       100.0         NaN\n",
+       "1        NaT  United States  Junaid       200.0       150.0\n",
+       "2        NaT  United States   Hamza         NaN       300.0\n",
+       "3        NaT  United States   Hamza       200.0       150.0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#correct the typos in names\n",
+    "df['name'] = df['name'].replace({'Juunaid': 'Junaid', 'Hazma': 'Hamza'})\n",
+    "df.head() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "811df990",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>country</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sales_2020</th>\n",
+       "      <th>sales_2021</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Junaid</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Hamza</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>300.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date        country    name  sales_2020  sales_2021\n",
+       "0 2021-12-01  United States  Junaid       100.0         NaN\n",
+       "2        NaT  United States   Hamza         NaN       300.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Remove duplicates\n",
+    "df = df.drop_duplicates(subset=\"name\")\n",
+    "df.head()"
    ]
   }
  ],
